Update index.html with modern Japanese design and navigation

--- a/index.html
+++ b/index.html
@@ -3,42 +3,194 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MIYABI - NFT Gallery</title>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@500&display=swap" rel="stylesheet">
+    <title>雅 -MIYABI-</title>
+    <style>
+        :root {
+            --main-color: #2D2D2D;
+            --accent-color: #B70033;
+            --bg-color: #FAFAFA;
+        }
+
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        body {
+            font-family: "Yu Mincho", "MS Mincho", serif;
+            background-color: var(--bg-color);
+            color: var(--main-color);
+            overflow-x: hidden;
+            perspective: 1000px;
+        }
+
+        .header {
+            position: fixed;
+            top: 0;
+            width: 100%;
+            padding: 2rem;
+            background-color: rgba(250, 250, 250, 0.95);
+            z-index: 1000;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            backdrop-filter: blur(8px);
+        }
+
+        .logo {
+            font-size: 2rem;
+            text-decoration: none;
+            color: var(--main-color);
+            letter-spacing: 0.2em;
+            transform-style: preserve-3d;
+            transition: transform 0.3s ease;
+        }
+
+        .logo:hover {
+            transform: translateZ(20px);
+        }
+
+        .nav-links {
+            display: flex;
+            gap: 3rem;
+        }
+
+        .nav-links a {
+            text-decoration: none;
+            color: var(--main-color);
+            font-size: 1rem;
+            letter-spacing: 0.1em;
+            position: relative;
+            padding: 0.5rem 0;
+            transition: transform 0.3s ease;
+            transform-style: preserve-3d;
+        }
+
+        .nav-links a:hover {
+            transform: translateZ(15px);
+        }
+
+        .nav-links a::after {
+            content: '';
+            position: absolute;
+            width: 0;
+            height: 1px;
+            bottom: 0;
+            left: 0;
+            background-color: var(--accent-color);
+            transition: width 0.3s ease;
+        }
+
+        .nav-links a:hover::after {
+            width: 100%;
+        }
+
+        .hero {
+            height: 100vh;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            position: relative;
+            transform-style: preserve-3d;
+        }
+
+        .hero-content {
+            text-align: center;
+            z-index: 1;
+            transform-style: preserve-3d;
+            animation: float 6s ease-in-out infinite;
+        }
+
+        @keyframes float {
+            0%, 100% { transform: translateZ(0); }
+            50% { transform: translateZ(30px); }
+        }
+
+        .hero-title {
+            font-size: 4.5rem;
+            margin-bottom: 1rem;
+            color: var(--main-color);
+            letter-spacing: 0.5em;
+            position: relative;
+        }
+
+        .hero-title::after {
+            content: 'MIYABI';
+            position: absolute;
+            bottom: -1.5rem;
+            left: 50%;
+            transform: translateX(-50%);
+            font-size: 1rem;
+            letter-spacing: 0.3em;
+            color: var(--accent-color);
+            opacity: 0.8;
+        }
+
+        .decorative-line {
+            position: absolute;
+            width: 1px;
+            height: 100vh;
+            background: linear-gradient(to bottom, transparent, var(--accent-color), transparent);
+            opacity: 0.2;
+            transform-style: preserve-3d;
+        }
+
+        .line-1 { left: 20%; animation: lineFloat 8s ease-in-out infinite; }
+        .line-2 { left: 80%; animation: lineFloat 8s ease-in-out infinite reverse; }
+
+        @keyframes lineFloat {
+            0%, 100% { transform: translateZ(0) scaleY(1); }
+            50% { transform: translateZ(50px) scaleY(1.1); }
+        }
+
+        .kanji-background {
+            position: absolute;
+            font-size: 20rem;
+            opacity: 0.03;
+            color: var(--main-color);
+            pointer-events: none;
+            transform: translateZ(-50px);
+        }
+
+        .kanji-1 { top: 10%; left: 10%; }
+        .kanji-2 { bottom: 10%; right: 10%; }
+    </style>
 </head>
 <body>
-    <header>
-        <nav>
-            <ul>
-                <li><a href="index.html" class="active">HOME</a></li>
-                <li><a href="model-gallery.html">ITEM</a></li>
-            </ul>
+    <header class="header">
+        <a href="index.html" class="logo">雅</a>
+        <nav class="nav-links">
+            <a href="about.html">ABOUT</a>
+            <a href="gallery.html">GALLERY</a>
+            <a href="model-gallery.html">ITEMS</a>
         </nav>
     </header>
 
-    <main>
-        <div id="nftGallery" class="gallery-grid">
-            <!-- NFTカードがここに動的に追加されます -->
+    <main class="hero">
+        <div class="decorative-line line-1"></div>
+        <div class="decorative-line line-2"></div>
+        <div class="kanji-background kanji-1">雅</div>
+        <div class="kanji-background kanji-2">美</div>
+        <div class="hero-content">
+            <h1 class="hero-title">雅</h1>
         </div>
     </main>
 
-    <!-- NFT詳細モーダル -->
-    <div id="nftModal" class="modal">
-        <div class="modal-content">
-            <span class="close">&times;</span>
-            <img id="modalImg" src="" alt="">
-            <h2 id="modalTitle"></h2>
-            <p id="modalDescription"></p>
-            <div id="modalTraits">
-                <!-- 特性情報がここに動的に追加されます -->
-            </div>
-        </div>
-    </div>
-
-    <script src="nftData.js"></script>
-    <script src="gallery.js"></script>
+    <script>
+        // 3Dパララックス効果
+        document.addEventListener('mousemove', (e) => {
+            const x = e.clientX / window.innerWidth;
+            const y = e.clientY / window.innerHeight;
+            
+            document.querySelectorAll('.decorative-line').forEach(line => {
+                line.style.transform = `translateZ(${(x + y) * 30}px)`;
+            });
+            
+            document.querySelectorAll('.kanji-background').forEach(kanji => {
+                kanji.style.transform = `translateZ(-50px) translate(${x * 20}px, ${y * 20}px)`;
+            });
+        });
+    </script>
 </body>
 </html>
